# retchat

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c  server.c  server.h
common/: crypto.c  crypto.h  kdf.h  protocol.h
linux/: Makefile.linux  client.c  gtk_client.c  server.c
src/: Client.cpp  Client.hpp  Commands.h  DiffieHellman.cpp  DiffieHellman.hpp  Logger.hpp  Packet.cpp  Packet.hpp  Protocol.hpp  Room.cpp  Room.hpp  Server.cpp  Server.hpp  server.c
win/: compile_MINGW.bat  compile_MSVC.bat
windows/: client.c  compile_MINGW.bat  compile_MSVC.bat  server.c
